--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Maximiliano Hombres, Indumentaria masculina"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Maximiliano Hombres</title>
   </head>
